# xorinator

./: CMakeLists.txt  LICENSE  README.md  build.sh
cli-tool/: CMakeLists.txt  clparser.cpp  clparser.hpp  main.cpp  runtime.cpp  runtime.hpp
include/: xorinator.hpp
test/: CMakeLists.txt  run-tests.sh  test_tools.cpp  test_tools.hpp
test/tests/: CMakeLists.txt  clparser.cpp  compat.cpp  rngkey.cpp  runtime.cpp
xorinator-lib/: CMakeLists.txt
